--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,104 @@
-.App {
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body{
+  font-family: 'Mukta', sans-serif;
+  background-color: #ADD8E6;
+}
+.block{
+  display: flex;
+  justify-content: space-between;
+}
+
+nav{
+  width: 100%;
+  height: 70px;
+  background-color: #007FFF;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+}
+nav ul{
+  list-style: none;
+  display: flex;
+  width: 200px;
+  justify-content: space-around;
+  cursor: pointer;
+}
+
+/* main section */
+main {
+  width: 100%;
+  height: 700px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+main .products{
+  width: 900px;
+  height: 550px;
+  margin: 20px auto;
+    display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  flex-wrap: wrap;
+  
+}
+main .products .shopping{
+  width: 250px;
+  height: 250px;
+  background-color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 0 5px ;
+  
+}
+
+main .products .small{
+  width: 80%;
+}
+
+
+button{
+  background-color: #333;
+  width: 100px;
+  height: 30px;
+  border: none;
+  border-radius: 15px;
   color: white;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.cart{
+  margin-top: 50px;
+  border-radius: 15px;
+  padding: 15px;
+  box-shadow: 0 0 5px;
+  width: 300px;
+  text-transform: capitalize;
+  text-align: center;
+  height: 400px;
+  background-color: #fff;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.add, .rem{
+  width: 25px;
+  margin-right: 5px;
+  background-color: transparent;
+  color: #333;
+  font-size: 24px;
+}
+.text-right{
+  text-align: right;
+}
+.row{
+  display: flex;
+  justify-content: space-around;
+}
+.col-1 {
+  flex: 1;
+}
+.col-2 {
+  flex: 2;
 }
